<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.23">
  <DUT Name="E_AlmClass" Id="{9564e666-48ec-4909-a84d-5c1c0066f49f}">
    <Declaration><![CDATA[TYPE E_AlmClass :
(
	///no alarm active
	NONE := 0,
	///info
	INFO,
	///warning
	WARNING,
	///tact stop
	TSTOP,
	///stop
	STOP,
	///off
	OFF,
	///Emergency off
	EOFF,
	Max_E_AlmClass
) INT;
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>