<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <GVL Name="Base_Const" Id="{f42e0853-8ea7-40ac-ab02-2078e6e00b3d}">
    <Declaration><![CDATA[(* Copyright 2017 Cimpress

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. *)

VAR_GLOBAL CONSTANT
	///number of child access possible in one controller class
	cMaxNrOfChilds: UINT := 30;
	///maximal number of commands implemented in one controller class
	cMaxCmdPerCtrl: UINT := 15;
	///maximal number of commands implemented in one controller class
	cMaxBaseCmdState: UINT := 200;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>