<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="E_Mode" Id="{2cc6d00b-d8f0-426c-9ff2-97a490f63eb9}">
    <Declaration><![CDATA[(* Copyright 2017 Cimpress

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. *)

{attribute 'qualified_only' := ''}
TYPE E_Mode :
(
	INITIALIZED := 0,
	AUTO := 10,
	SEMI := 11,
	MANU := 12
) INT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>