<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.14">
  <DUT Name="T_Ctrl_CIf" Id="{0baa00c6-eff6-4254-b907-5ba120619f3d}">
    <Declaration><![CDATA[TYPE T_Ctrl_CIf :
STRUCT
	Job: T_Ctrl_Job;
	Info: T_Ctrl_Info;
	SwCfg: T_Ctrl_SwCfg;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>