<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="T_Ctrl_Class" Id="{9c20edf1-e3b3-43ce-9c8c-f14d4afb36c0}">
    <Declaration><![CDATA[(* Copyright 2017 Cimpress

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. *)

TYPE T_Ctrl_Class :
STRUCT
	///local test flag to supress cyclic run (for debugging after init)
	bolActivate					: BOOL;
	intCmd						: INT;
	intCmdLast					: INT;
	eModeHistory				: E_Mode;
	///local flag mode change detected
	bolChangeBackToAUTO			: BOOL;
	StateMachine				: T_Ctrl_Class_StateMachine;
	SubStateMachine				: T_Ctrl_Class_StateMachine;
	Alarm						: T_Ctrl_Class_Alm;
	FUBInfo						: T_fbInfo;
	AlarmConfig					: T_Ctrl_AlarmConfig;
	// StateLogger infos
	stStateLogger : T_StateLogger;
	// Simulate All Executed
	bolSimulateAllExecuted			: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>