<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <DUT Name="T_Ctrl_Class_Alm" Id="{48fed453-321c-426a-8baa-13222019be90}">
    <Declaration><![CDATA[TYPE T_Ctrl_Class_Alm :
STRUCT
	bolResetOk: BOOL;
	///flag positive check me alarm from child
	bolfp: BOOL;
	///local activ alarm class of parent ctrl
	eParent_ActivAlmClass: E_AlmClass;
	///highest local activ alarm class
	eActivAlmClass: E_AlmClass;
END_STRUCT
END_TYPE]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>