<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="T_Ctrl_SwCfg" Id="{a3c77727-482a-464c-9a06-508002f4acd3}">
    <Declaration><![CDATA[(* Copyright 2017 Cimpress

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. *)

TYPE T_Ctrl_SwCfg :
	STRUCT
		///hardware/controller exists
		bolExist: BOOL;
		///enable statemachine
		bolEnable: BOOL;
		///set controller in simulation(statemachine active, io local simulated)
		bolSimulation: BOOL;
		//set controller and all sub controllers into simulation(statemachine active, io local simulated)
		bolAllSimulation: BOOL;
		// enable statelogger
		bolEnStateLogger: BOOL;
	END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>